[package]
name = "the_real_anonymous_chatbot"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "run_bash_within_rust"
path = "src/run_bash_within_rust.rs"

[[bin]]
name = "time_manipulation"
path = "src/time_manipulation.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.6"